fix project spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -812,7 +812,7 @@ a {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width: 82vw;
+	width: 83vw;
 	padding: 2em 2em;
 	margin-top: 2em;
 	margin-bottom: 2em;
@@ -835,7 +835,7 @@ a {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width: 82vw;
+	width: 83vw;
 	padding: 2em 2em;
 	margin-top: 2em;
 	margin-bottom: 2em;
@@ -866,7 +866,7 @@ a {
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: center;
-	width: 70vw;
+	width: 72vw;
 	height: 100%;
 	margin-block: 1em;
 }
@@ -1129,7 +1129,7 @@ a {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width: 90vw;
+	width: 85vw;
 	padding: 2em 3em;
 	margin-top: 2em;
 	margin-bottom: 4em;
@@ -1151,7 +1151,7 @@ a {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width: 90vw;
+	width: 85vw;
 	padding: 2em 3em;
 	margin-top: 2em;
 	margin-bottom: 4em;
@@ -1385,6 +1385,7 @@ a {
     display: flex;
     align-items: start;
     margin: 0;
+	margin-bottom: 0.5em;
     padding: 0;
     gap: 0.2em; 
 }
